# GreenHouse2

DeviceControlModule/: DeviceControlModule.ino  README.md
Hardware/: GH.fzz  README.md
R&D/: core.cpp  journal.MD
demo/: CMakeLists.txt  Configurator.hpp  DG_EXE_CONFIG.txt  GlobalState.hpp  OrangePI.md  app  logic.json  main.cpp  state.txt
demo/API/: HTTP_API.md  HttpServer.hpp  JsonAPI.hpp  server  test_http_server.cpp
demo/API/web/: app.js  index.html  logic.html  logic.js
demo/DataGetter/: ADataGetter_Strategy.hpp  DG_DS18B20.hpp  DG_OWM_Weather.hpp  DG_SYS_CPU.hpp  DG_SYS_DISK.hpp  DG_SYS_MEM.hpp  DG_SYS_TIME.hpp  DataGetter.hpp  DataGetter_Subsystem_Documentation.md  GlobalState.hpp  RandomFloatStrategy.hpp  app  main.cpp
demo/Executor/: AExecutor_Strategy.hpp  EX_DeviceControlModule.hpp  Executor.hpp  ExecutorStateBridge.hpp  Executor_Strategy_SIM.hpp  Executor_Subsystem_Documentation.md  exec_demo  main_exec_test.cpp
demo/Logic/: ActionModel.hpp  ArgumentResolver.hpp  ConditionContext.hpp  LogicDebugJson.hpp  LogicJsonController.hpp  RuleEngine.hpp  RuleNode.hpp  RuleTree.hpp
demo/SIM/: HeatGrid.hpp  HeatSimAdapter.hpp  ISimControl.hpp  SIM_monitor.hpp  main_SIM.cpp  sim_scene.hpp
demo/Scheduler/: Scheduler.hpp  Scheduler_Module_Documentation.md  Scheduler_monitor (1).hpp  main_sched_test.cpp  scheduler_monitor.hpp
demo/Tools/: CRC8.hpp  DCMtest.cpp  DateTime.hpp  DeviceControlModule.hpp  SerialComm.hpp  SysCpu.hpp  SysDisk.hpp  SysMem.hpp  Tools_Subsystem_Documentation.md  WeatherAPI.hpp  json_readme.txt  serialapp  serialtest.cpp
(+5 files in other folders)
